[package]
name = "hyper-tree-router"
version = "0.2.0"
edition = "2021"
description = "Routing middleware for Hyper http library using Prefix tree (trie) for path finding."
keywords = ["trie", "prefix", "tree", "hyper", "router"]
authors = ["butlerx <butlerx@notthe.cloud>"]
rust-version = "1.64"
readme = "README.md"
license = "MIT"
repository = "https://github.com/butlerx/hyper-tree-router"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["http1", "server", "tcp"] }
prefix_tree_map = "0.2.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = { version = "^0.14", features = ["http1", "server", "tcp", "stream"] }

[lib]
name = "hyper_tree_router"
